# app_pay

./: .gitignore  README.md  package-lock.json
.cursor/rules/: server.mdc
.github/workflows/: docker-publish.yml
admin/: Dockerfile  components.d.ts  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
admin/env/: .env.production
admin/src/: App.vue  env.d.ts  main.ts  vite-env.d.ts
admin/src/apis/: auth.ts  devices.ts  images.ts  index.ts  permissions.ts  resources.ts  roles.ts  users.ts
admin/src/assets/: main_output.css
admin/src/components/: AppMenu.vue  AppSidebarMenu.vue
admin/src/layouts/: AdminLayout.vue  HomeLayout.vue
admin/src/locales/: en-US.json  en.json  zh-CN.json  zh-cn.json
admin/src/router/: index.ts
admin/src/stores/: auth.ts  locale.ts  oss.ts
admin/src/types/: api.ts  apps.ts  images.ts  index.ts  permissions.ts  reg_codes.ts  route.ts  user.ts
admin/src/utils/: i18n.ts  index.ts  oss.ts  request.ts
admin/src/views/: HomeView.vue  ProductsView.vue
admin/src/views/admin/: AppAdminView.vue  DevicesAdminView.vue  ImageAdminView.vue  LoginView.vue  OrderAdminView.vue  PermissionAdminView.vue  ProductAdminView.vue  RegCodesAdminView.vue  ResourceAdminView.vue  RoleAdminView.vue  UserAdminView.vue
admin/src/views/auth/: LoginView.vue  RegisterView.vue
admin/tools/: extract-i18n-keys.js
backend/: Cargo.toml
backend/src/: database.rs  handlers.rs  main.rs  models.rs
frontend/: tsconfig.app.json
frontend/frontend/: package-lock.json  package.json
frontend/src/assets/: main_output.css
frontend/src/layouts/: AdminLayout.vue
frontend/src/views/admin/: DashboardView.vue  LoginView.vue  OrderAdminView.vue
icon/: convert-to-png.html
pub/: .env  .env.example  .gitignore  README.md  docker-compose.release.yml  docker-compose.yml  update_all.sh
pub/deploy/nginx/templates/: nginx.conf.template
pub/deploy/postgres/init/: init.sql
pub/deploy/server/: casbin_model.conf
pub/web/: index.html
pub/web/assets/: HomeLayout-BBqPkpOQ.js  HomeLayout-BLuuqPwI.js  HomeLayout-BXcTdsJw.js  HomeLayout-BmaCyT6K.js  HomeLayout-DBk8RQC_.js  HomeLayout-Dm5R-Q7O.js  HomeLayout-DyOVahZc.js  HomeView-7lNfqu04.js  HomeView-BDCuiaCT.js  HomeView-BGi3koFL.js  HomeView-BS2g5S9U.js  HomeView-Beh06S6s.js  HomeView-CK0MTn62.js  HomeView-CvpefmiT.js  ProductsView-6xW5xEYo.js  ProductsView-BWg0FAvG.js  ProductsView-BgEXK4B6.js  ProductsView-Bxg0u2ki.js  ProductsView-CjVODS1T.css  ProductsView-Cs9Qss9F.js  ProductsView-DBd98Ztm.js  ProductsView-N-H0QqJ-.js  index-1IaQW2Zx.js  index-BBGOOAGI.js  index-BGEUwiem.js  index-BICq7EjA.js  index-CazuWx7-.css  index-DGaJOQbY.js  index-DJYUR2o1.js  index-DKJC5Uga.js
server/: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.release  README.md  docker-compose.yml  rebuild_run.bat  run_test.bat
server/.github/workflows/: docker-publish.yml
server/aliyun-sts/: Cargo.toml  README.md
server/aliyun-sts/src/: lib.rs
server/deploy/mysql/: my.cnf
server/deploy/postgres/init/: init.sql
server/entity/: Cargo.toml
server/entity/src/: app_devices.rs  apps.rs  casbin_rule.rs  coupons.rs  coupons_apps.rs  coupons_products.rs  images.rs  invite_records.rs  lib.rs  order_coupons.rs  order_products.rs  order_reg_codes.rs  orders.rs  pay_methods.rs  prelude.rs  product_categories.rs  products.rs  reg_codes.rs  resources.rs  roles.rs  user.rs  users.rs
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20220101_000001_create_product_table.rs  m20240731_000002_create_users_table.rs  m20240801_000003_create_role_table.rs
server/pay/: Cargo.toml  README.md  UNIFIED_PAYMENT.md
server/pay/examples/: unified_payment_example.rs
server/pay/src/: lib.rs  utils.rs
server/pay/src/alipay/: bill.rs  common.rs  refund.rs
server/pay/src/unified/: mod.rs  prelude.rs
server/pay/src/wechat/: bill.rs  common.rs  refund.rs
server/src/: app.rs  constants.rs  database.rs  lib.rs  main.rs  my_error.rs  router.rs
server/src/entities/: Cargo.toml  coupons.rs  mod.rs  product.rs  products.rs  role.rs  user.rs
server/src/handlers/: app_handler.rs  app_handler_base.rs  app_handler_macro.rs  auth.rs  base_handler.rs  casbin_handler.rs  casbin_middleware.rs  coupons_handler.rs  crud_macro.rs  device_handler.rs  image_handler.rs  invite_records_handler.rs  middleware.rs  mod.rs  orders_handler.rs  oss_handler.rs  pay_method_handler.rs  payment_handler.rs  permissions_handler.rs  product.rs  product_handler.rs  reg_codes_handler.rs  resource_handler.rs  response.rs  role_handler.rs  user_handler.rs  user_handler_base.rs  vuefinder_handler.rs
server/src/services/: casbin_service.rs  mod.rs
server/src/types/: app_devices_types.rs  app_types.rs  casbin_types.rs  common.rs  config.rs  coupons_types.rs  crud.rs  error.rs  image_types.rs  invite_records_types.rs  mod.rs  orders_types.rs  pay_method_types.rs  pay_types.rs  product_types.rs  reg_codes_types.rs  resource_types.rs  response.rs  role_types.rs  user_types.rs
server/src/utils/: cache.rs  casbin_adapter.rs  casbin_init.rs  casbin_service.rs  check.rs  custom_casbin_adapter.rs  jwt.rs  mod.rs  performance.rs  redis_cache.rs
server/test/: build_docker.bat
server/tests/: app_tests.rs  auth_tests.rs  casbin_tests.rs  general_tests.rs  helpers.rs  images_tests.rs  invite_records_tests.rs  orders_tests.rs  oss_tests.rs  pay_method_tests.rs  performance_tests.rs  product_tests.rs  reg_codes_tests.rs  resources_tests.rs  role_tests.rs  user_tests.rs
server/xt-oss/: Cargo.toml
server/xt-oss/src/: oss.rs
server/xt-oss/src/oss/api/: region.rs  service.rs  sts.rs
server/xt-oss/src/oss/api/bucket/: acceleration.rs  acl.rs  cors.rs  encryption.rs  lifecycle.rs  log.rs  payment.rs  policy.rs  referer.rs  style.rs  tags.rs  versions.rs  website.rs  worm.rs
server/xt-oss/src/oss/api/objects/: acl.rs  multi_upload.rs  stand.rs  taging.rs
