[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.46.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "sqlite" ] }
tower-http = { version = "0.5.2", features = ["cors"] }
dotenvy = "0.15.7"
