[package]
name = "app_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.46.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "mysql" ] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
dotenvy = "0.15.7"
sea-orm = { version = "1.1.13", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros","debug-print"] }
migration = { path = "migration" }
entity = { path = "entity" }
bcrypt = "0.17.0"
jsonwebtoken = "9.3"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
utoipa = { version = "5.0.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
futures = "0.3.31"

[workspace]
members = ["migration", "entity"]

