[package]
name = "app_server"
version = "0.1.0"
edition = "2024"

[lib]
name = "app_server"
path = "src/lib.rs"

[[bin]]
name = "app_server"
path = "src/main.rs"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.46.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres" ] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
dotenvy = "0.15.7"
sea-orm = { version = "1.1.13", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros","debug-print"] }
migration = { path = "migration" }
entity = { path = "entity" }
bcrypt = "0.17.0"
jsonwebtoken = "9.3"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
utoipa = { version = "5.0.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
validator= {version="0.20.0",features = ["derive"]}
futures = "0.3.31"
redis={version="0.32.4",features = ["tokio-comp", "json","aio"] }
http-body-util = "0.1"
casbin = { version = "2.10.1", default-features = false, features = ["runtime-async-std", "logging", "incremental"] }
async-trait={version="0.1.88"}

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
tower-service = "0.3"
hyper = { version = "1.0", features = ["full"] }
mime = "0.3"

[workspace]
members = ["migration", "entity"]
