[package]
name = "aliyun-sts"
version = "0.1.4"
edition = "2021"
rust-version = "1.78.0"
authors = ["Yuan YQ <yuqiang.yuan@163.com>"]
description = "A tiny lib for aliyun sts api.  阿里云 STS API 调用工具"
keywords = ["aliyun", "sts", "ali"]
documentation = "https://docs.rs/aliyun-sts-rust-sdk"
repository = "https://github.com/yuqiang-yuan/aliyun-sts-rust-sdk"
license = "MIT"
categories = ["api-bindings", "web-programming"]

[dependencies]
chrono = "0.4.38"
hmac = "0.12.1"
reqwest = {version = "0.12.9", default-features = false, features = ["rustls-tls", "json"]}
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
urlencoding = "2.1.3"
hex = "0.4.3"
sha2 = "0.10.8"
log = "0.4.22"
simple_logger = "5.0.0"

[dev-dependencies]
dotenv = "0.15.0"
tokio = {version = "1.40.0", features = ["full"]}
