[package]
name = "pay"
version = "0.1.0"
edition = "2021"
description = "Payment SDK for Alipay and WeChat Pay based on weapay"

[dependencies]
aes = "0.8.4"
cbc = "0.1.2"
aes-gcm = { version = "0.10.3", features = ["std"] }
# 使用 rustls 替代 openssl 以避免 Windows 编译问题
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.38.1", features = ["rt-multi-thread", "macros"] }
rsa = "0.9"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
dotenv = "0.15"
